--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -203,7 +203,7 @@
                 <div class="row">
                     <div class="panel panel-flat border-top-blue">
                         <div class="panel-heading">
-                            <h6>{{ 'coaster.infos.photos'|trans }}</h6>
+                            <h6>{{ 'coaster.photos'|trans }}</h6>
                         </div>
                         <div class="panel-body no-border no-padding-top">
                             {% for imagePath in images %}
