--- a/src/BddBundle/Resources/views/User/list_ratings.html.twig
+++ b/src/BddBundle/Resources/views/User/list_ratings.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% set title = 'Notes de ' ~ user.username %}
+{% set title = 'Notes de ' ~ user.displayName %}
 {% set subTitle = '' %}
 {% block title %}{{ title }}{% endblock %}
 
