--- a/src/BddBundle/Resources/views/User/list.html.twig
+++ b/src/BddBundle/Resources/views/User/list.html.twig
@@ -20,14 +20,14 @@
                         <div class="media-left">
                             {% if user.0.profilePicture %}
                                 <img src="{{ user.0.profilePicture }}" style="width: 70px; height: 70px;"
-                                     class="img-circle img-md" alt="{{ user.0.username }}">
+                                     class="img-circle img-md" alt="{{ user.0.displayName }}">
                             {% else %}
                                 <img src="{{ asset('images/default_user.png') }}" style="width: 70px; height: 70px;"
-                                     class="img-circle img-md" alt="{{ user.0.username }}">
+                                     class="img-circle img-md" alt="{{ user.0.displayName }}">
                             {% endif %}
                         </div>
                         <div class="media-body">
-                            <h6 class="media-heading">{{ user.0.username }}</h6>
+                            <h6 class="media-heading">{{ user.0.displayName }}</h6>
                             <p class="text-muted">
                                 {{ 'user_list.member_from'|trans }} {{ user.0.createdAt|date("d/m/Y") }}
                             </p>
