--- a/src/BddBundle/Resources/views/Coaster/reviews.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/reviews.html.twig
@@ -2,12 +2,10 @@
     <!-- Comments -->
     <div class="panel panel-flat">
         <div class="panel-heading">
-            <h6 class="panel-title text-semiold">Avis</h6>
-            <div class="heading-elements">
-                <ul class="list-inline list-inline-separate heading-text text-muted">
-                    <li>{{ reviews|length }} avis</li>
-                </ul>
-            </div>
+            <h6 class="panel-title text-semiold">
+                {{ 'review.title'|trans() }}
+                &nbsp;<span class="badge badge-primary">{{ reviews|length }}
+            </h6>
         </div>
 
         <div class="panel-body">
@@ -45,10 +43,10 @@
                             {% if review.positiveKeywords|length > 0 or review.negativeKeywords|length > 0 %}
                                 <p>
                                     {% for pros in review.positiveKeywords %}
-                                        <span class="label label-success label-rounded">{{ pros.name }}</span>
+                                        <span class="label label-success label-rounded">{{ pros.name|trans([], 'database') }}</span>
                                     {% endfor %}
                                     {% for cons in review.negativeKeywords %}
-                                        <span class="label label-danger label-rounded">{{ cons.name }}</span>
+                                        <span class="label label-danger label-rounded">{{ cons.name|trans([], 'database') }}</span>
                                     {% endfor %}
                                 </p>
                             {% endif %}
@@ -59,8 +57,11 @@
                                 <ul class="list-inline list-inline-separate text-size-small">
                                     {#<li>114 <a href="#"><i class="icon-arrow-up22 text-success"></i></a><a href="#"><i#}
                                     {#class="icon-arrow-down22 text-danger"></i></a></li>#}
-                                    <li><a href="{{ path('review_form', {'id': review.coaster.id}) }}">Modifier mon
-                                            avis</a></li>
+                                    <li>
+                                        <a href="{{ path('review_form', {'id': review.coaster.id}) }}">
+                                            {{ 'review.update'|trans() }}
+                                        </a>
+                                    </li>
                                 </ul>
                             {% endif %}
                         </div>
@@ -70,7 +71,10 @@
         </div>
         <div class="panel-body">
             <a href="{{ path('review_form', {'id': reviews.0.coaster.id}) }}">
-                <button type="button" class="btn bg-blue"><i class="icon-plus22"></i> Envoyer un avis</button>
+                <button type="button" class="btn bg-blue">
+                    <i class="icon-plus22"></i>
+                    {{ 'review.button'| trans() }}
+                </button>
             </a>
         </div>
     </div>
