--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -19,7 +19,9 @@
                             <span class="text-size-mini text-muted">
                                 Moyenne des {{ coaster.totalRatings }} notes</span>
                         {% else %}
-                            <span class=" text-size-small text-muted">Pas assez de notes sur ce coaster !</span>
+                            <span class=" text-size-small text-muted">
+                                {{ 'coaster.rating.notenough'|trans() }}
+                            </span>
                         {% endif %}
                     </div>
 
@@ -31,13 +33,15 @@
             <!-- /average rating -->
             <!-- star rating -->
             <div class="panel panel-body border-top-primary text-center">
-                <h6 class="no-margin text-semibold">{{ 'coaster.rateit'|trans }}</h6>
+                <h6 class="no-margin text-semibold">{{ 'coaster.rating.action'|trans }}</h6>
                 <br/>
                 {% if is_granted('ROLE_USER') %}
                     {{ render(controller('BddBundle:RatingCoaster:ajaxEdit', {'id': coaster.id})) }}
                 {% else %}
-                    <p class="text-muted content-group-sm">Il faut être connecté pour noter.</p>
-                    <a href="{{ path('hwi_oauth_connect') }}">Se connecter</a>
+                    <p class="text-muted content-group-sm">
+                        {{ 'coaster.rating.mustlogin'|trans() }}
+                    </p>
+                    <a href="{{ path('hwi_oauth_connect') }}">{{ 'coaster.rating.login'|trans() }}</a>
                 {% endif %}
             </div>
             <!-- /star rating -->
@@ -73,14 +77,18 @@
             <!-- coaster details -->
             <div class="panel panel-white">
                 <div class="panel-heading">
-                    <h6>Caractéristiques de {{ coaster.name }}</h6>
+                    <h6>
+                    {{ 'coaster.infos.title'|trans({'%name%': coaster.name}) }}
+                    </h6>
                 </div>
 
                 <div class="list-group no-border">
                     <div class="list-group-item">
                         <label class="control-label no-margin text-semibold">{{ 'coaster.infos.status'|trans }}:</label>
-                        <div class="pull-right"><span
-                                    class="label label-{{ coaster.status.type }}">{{ coaster.status.name }}</span>
+                        <div class="pull-right">
+                            <span class="label label-{{ coaster.status.type }}">
+                                {{ coaster.status.name|trans([], 'database') }}
+                            </span>
                         </div>
                     </div>
                     <div class="list-group-item">
@@ -89,7 +97,7 @@
                     </div>
                     <div class="list-group-item">
                         <label class="control-label no-margin text-semibold">{{ 'coaster.infos.country'|trans }}:</label>
-                        <div class="pull-right">{{ coaster.park.country.name }}</div>
+                        <div class="pull-right">{{ coaster.park.country.name|trans([], 'database') }}</div>
                     </div>
                     <div class="list-group-item">
                         <label class="control-label no-margin text-semibold">{{ 'coaster.infos.type'|trans }}:</label>
@@ -100,7 +108,10 @@
                     <div class="list-group-item">
                         <label class="control-label no-margin text-semibold">{{ 'coaster.infos.launch'|trans }}:</label>
                         <div class="pull-right">
-                            {{ coaster.builtCoaster.launchs|join(', ') }}
+                            {% for launch in coaster.builtCoaster.launchs %}
+                                {{ launch|trans([], 'database') }}
+                                {% if not loop.last %},{% endif %}
+                            {% endfor %}
                         </div>
                     </div>
                     <div class="list-group-item">
@@ -109,7 +120,7 @@
                     </div>
                     <div class="list-group-item">
                         <label class="control-label no-margin text-semibold">{{ 'coaster.infos.restraint'|trans }}:</label>
-                        <div class="pull-right">{{ coaster.builtCoaster.restraint.name }}</div>
+                        <div class="pull-right">{{ coaster.builtCoaster.restraint.name|trans([], 'database') }}</div>
                     </div>
                     {% if coaster.builtCoaster.gForce %}
                         <div class="list-group-item">
@@ -168,7 +179,8 @@
             <!-- coasters in park -->
             <div class="panel panel-white">
                 <div class="panel-heading">
-                    <h6>Coasters de {{ coaster.park.name }}
+                    <h6>
+                        {{ 'coaster.parkcoaster'|trans({'%name%': coaster.park.name}) }}
                         &nbsp;<span class="badge badge-primary">{{ coaster.park.coasters|length }}</span>
                     </h6>
                 </div>
