--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -288,8 +288,8 @@
               "aggregateRating": {
                 "@type": "AggregateRating",
                 "ratingValue": "{{ coaster.averageRating }}",
-                "bestRating": 0.5,
-                "worstRating": 5,
+                "bestRating": "0.5",
+                "worstRating": "5",
                 "reviewCount": "{{ coaster.ratings|length }}"
               }
             }
