--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -287,9 +287,9 @@
               "name": "{{ coaster.name }}",
               "aggregateRating": {
                 "@type": "AggregateRating",
-                "ratingValue": "{{ coaster.averageRating }}",
-                "bestRating": "0.5",
-                "worstRating": "5",
+                "ratingValue": "{{ coaster.averageRating|number_format('2', ',') }}",
+                "bestRating": "5",
+                "worstRating": "0,5",
                 "reviewCount": "{{ coaster.ratings|length }}"
               }
             }
