--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-header">
         <a class="navbar-brand" href="{{ path('bdd_index') }}">
-            <img src="{{ asset('images/logo_light.png') }}" alt="Coasters World">
+            <img src="{{ asset('images/logo_light.svg') }}" alt="Captain Coaster">
         </a>
         <ul class="nav navbar-nav visible-xs-block">
             <li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
