--- a/src/BddBundle/Resources/views/Maps/index.html.twig
+++ b/src/BddBundle/Resources/views/Maps/index.html.twig
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ 'map_index.title'|trans }} • Coasters World</title>
+    <title>{{ 'map_index.title'|trans }} • Captain Coaster</title>
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ asset('apple-touch-icon-144x144.png') }}"/>
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ asset('apple-touch-icon-152x152.png') }}"/>
     <link rel="icon" type="image/png" href="{{ asset('favicon-32x32.png') }}" sizes="32x32"/>
     <link rel="icon" type="image/png" href="{{ asset('favicon-16x16.png') }}" sizes="16x16"/>
-    <meta name="application-name" content="Coasters World"/>
+    <meta name="application-name" content="Captain Coaster"/>
     <meta name="msapplication-TileColor" content="#FFFFFF"/>
     <meta name="msapplication-TileImage" content="mstile-144x144.png"/>
     <link rel="manifest" href="{{ asset('manifest.json') }}">
